--- a/client/hashtags.html
+++ b/client/hashtags.html
@@ -3,7 +3,7 @@
 @Date:   13-May-172017
 @Filename: hashtags.html
 @Last modified by:   john
-@Last modified time: 20-May-172017
+@Last modified time: 21-May-172017
 -->
 
 
@@ -24,7 +24,7 @@
     </style>
     <script>
         function generateGraph() {
-            d3.json('http://localhost:9090/hashdata', function(data) {
+            d3.json('http://localhost/hashdata', function(data) {
                 //modify away!
                 //console.log(data);
                 MG.data_graphic({
