--- a/client/mentions.html
+++ b/client/mentions.html
@@ -3,7 +3,7 @@
 @Date:   13-May-172017
 @Filename: hashtags.html
 @Last modified by:   john
-@Last modified time: 20-May-172017
+@Last modified time: 21-May-172017
 -->
 <!DOCTYPE html>
 <html>
@@ -25,7 +25,7 @@
     <script>
 
         function generateGraph(){
-            d3.json('http://localhost:9090/mentiondata', function(data) {
+            d3.json('http://localhost/mentiondata', function(data) {
                 //modify away!
                 //console.log(data);
                 MG.data_graphic({
