--- a/client/hashtags.html
+++ b/client/hashtags.html
@@ -24,7 +24,7 @@
     </style>
     <script>
         function generateGraph() {
-            d3.json('http://localhost/hashdata', function(data) {
+            d3.json('http://188.166.165.168/hashdata', function(data) {
                 //modify away!
                 //console.log(data);
                 MG.data_graphic({
