--- a/client/mentions.html
+++ b/client/mentions.html
@@ -25,7 +25,7 @@
     <script>
 
         function generateGraph(){
-            d3.json('http://localhost/mentiondata', function(data) {
+            d3.json('http://188.166.165.168/mentiondata', function(data) {
                 //modify away!
                 //console.log(data);
                 MG.data_graphic({
