added stacking counts and page links

--- a/client/mentionsstack.html
+++ b/client/mentionsstack.html
@@ -16,6 +16,7 @@
     <script src='./js/metricsgraphics.min.js'></script>
     <link href='./css/metricsgraphics.css' rel='stylesheet' type='text/css'>
     <link href='./css/leaders.css' rel='stylesheet' type='text/css'>
+    <link href='./css/common.css' rel='stylesheet' type='text/css'>
     <style>
         #tags {
             width: 90%;
@@ -54,6 +55,14 @@
 </head>
 
 <body>
+  <nav id="menu">
+      <ul>
+          <li><a href="/mentions"> Leader Mentions </a></li>
+          <li><a href="/hashtags"> Debate hashtags </a> </li>
+          <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
+          <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
+      </ul>
+  </nav>
     <div id="mentions">
 
 
