--- a/client/mentions.html
+++ b/client/mentions.html
@@ -16,6 +16,7 @@
     <script src='./js/metricsgraphics.min.js'></script>
     <link href='./css/metricsgraphics.css' rel='stylesheet' type='text/css'>
     <link href='./css/leaders.css' rel='stylesheet' type='text/css'>
+    <link href='./css/common.css' rel='stylesheet' type='text/css'>
     <style>
         #tags {
             width: 90%;
