--- a/client/hashtagsstack.html
+++ b/client/hashtagsstack.html
@@ -20,6 +20,8 @@
     <link href='./css/metricsgraphics.css' rel='stylesheet' type='text/css'>
     <link href='./css/override.css' rel='stylesheet' type='text/css'>
     <link href='./css/common.css' rel='stylesheet' type='text/css'>
+    <script src='./js/mg_line_brushing.js'></script>
+    <link rel='stylesheet' href='./css/mg_line_brushing.css' />
     <style>
 
     </style>
