--- a/client/mentions.html
+++ b/client/mentions.html
@@ -17,6 +17,8 @@
     <link href='./css/metricsgraphics.css' rel='stylesheet' type='text/css'>
     <link href='./css/leaders.css' rel='stylesheet' type='text/css'>
     <link href='./css/common.css' rel='stylesheet' type='text/css'>
+    <script src='./js/mg_line_brushing.js'></script>
+    <link rel='stylesheet' href='./css/mg_line_brushing.css' />
     <style>
         #tags {
             width: 90%;
