--- a/client/mentions.html
+++ b/client/mentions.html
@@ -32,22 +32,22 @@
 
               var markers = [{
                 'minute': 10,
-                'label': 'Sturgeon - SNP strengthen scotland & single market'
+                'label': 'Sturgeon - \n SNP strengthen \n scotland & single market'
               }, {
                 'minute': 17,
-                'label': 'Dugdale  -labour only party to take on torys'
+                'label': 'Dugdale  -\n labour only \n party to \n take on torys'
               }, {
                 'minute': 19,
-                'label': 'Public Question about brexit'
+                'label': 'Public Question \n about brexit'
               }, {
                 'minute': 28,
-                'label': 'Discussion around 2nd Referendum'
+                'label': 'Discussion around \n 2nd Referendum'
               }, {
                 'minute': 31,
-                'label': 'Davidson - Sturgeon promised it wuld be once'
+                'label': 'Davidson - \n Sturgeon promised \n it wuld be once'
               }, {
                 'minute': 35,
-                'label': 'Nurse 1st apperance'
+                'label': 'Nurse \n 1st apperance'
               }
               , {
                 'minute': 46,
@@ -55,27 +55,27 @@
               }
               , {
                 'minute': 49,
-                'label': 'Sturgeon - education response'
+                'label': 'Sturgeon - \n education response'
               }
               , {
                 'minute': 52,
-                'label': 'Davidson - education'
+                'label': 'Davidson - \n education'
               }
               , {
                 'minute': 53,
-                'label': 'PQ - primary pupils failing'
+                'label': 'PQ - \n primary pupils failing'
               }, {
                 'minute': 54,
-                'label': 'PQ - Tuition fees '
+                'label': 'PQ - \n Tuition fees '
               }, {
                 'minute': 55,
-                'label': 'PQ - Maintenance grants?'
+                'label': 'PQ - \n Maintenance grants?'
               }, {
                 'minute': 56,
-                'label': 'Harvie - response to fees and education'
+                'label': 'Harvie - \n response to \n fees and education'
               }, {
                 'minute': 68,
-                'label': 'Nurse (again) and public sector payment'
+                'label': 'Nurse (again) \n and public \n sector payment'
               }, {
                 'minute': 77,
                 'label': 'debate finishes'
