--- a/client/mentions.html
+++ b/client/mentions.html
@@ -32,50 +32,50 @@
 
               var markers = [{
                 'minute': 10,
-                'label': 'Sturgeon - \n SNP strengthen \n scotland & single market'
+                'label': 'Sturgeon'
               }, {
                 'minute': 17,
-                'label': 'Dugdale  -\n labour only \n party to \n take on torys'
+                'label': 'Dugdale'
               }, {
                 'minute': 19,
-                'label': 'Public Question \n about brexit'
+                'label': 'PQ -brexit'
               }, {
                 'minute': 28,
-                'label': 'Discussion around \n 2nd Referendum'
+                'label': 'Indyref2'
               }, {
                 'minute': 31,
-                'label': 'Davidson - \n Sturgeon promised \n it wuld be once'
+                'label': 'Davidson'
               }, {
                 'minute': 35,
-                'label': 'Nurse \n 1st apperance'
+                'label': 'Nurse'
               }
               , {
                 'minute': 46,
-                'label': 'Education questions'
+                'label': 'Education'
               }
               , {
                 'minute': 49,
-                'label': 'Sturgeon - \n education response'
+                'label': 'Sturgeon'
               }
               , {
                 'minute': 52,
-                'label': 'Davidson - \n education'
+                'label': 'Davidson'
               }
               , {
                 'minute': 53,
-                'label': 'PQ - \n primary pupils failing'
+                'label': 'PQ - primary pupils'
               }, {
                 'minute': 54,
-                'label': 'PQ - \n Tuition fees '
+                'label': 'PQ - Tuition fees '
               }, {
                 'minute': 55,
-                'label': 'PQ - \n Maintenance grants?'
+                'label': 'PQ - grants?'
               }, {
                 'minute': 56,
-                'label': 'Harvie - \n response to \n fees and education'
+                'label': 'Harvie'
               }, {
                 'minute': 68,
-                'label': 'Nurse (again) \n and public \n sector payment'
+                'label': 'Nurse (again)'
               }, {
                 'minute': 77,
                 'label': 'debate finishes'
