--- a/client/mentions-debaters.html
+++ b/client/mentions-debaters.html
@@ -28,7 +28,7 @@
     <script>
 
         function generateGraph(){
-            d3.json('mentiondata.json', function(data) {
+            d3.json('http://188.166.165.168/mentiondata', function(data) {
 
               var markers = [{
                 'minute': 10,
