--- a/client/mentions-debaters.html
+++ b/client/mentions-debaters.html
@@ -89,7 +89,7 @@
                     legend: data.labels,
                     width: 800,
                     height: 700,
-                    max_data_size :6;
+                    max_data_size:6,
                     target: "#mentions",
                     x_accessor: "minute",
                     y_accessor: "value",
