--- a/client/mentions-debaters.html
+++ b/client/mentions-debaters.html
@@ -86,7 +86,7 @@
                     title: "Mentions under #" + data.trackingtag,
                     description: "test",
                     data: data.data,
-                    legend: data.labels,
+                    legend: ['NicolaSturgeon','RuthDavidsonMSP', 'kezdugdale','willie_rennie','patrickharvie','DavidCoburnUKip']
                     width: 800,
                     height: 700,
                     max_data_size:6,
