--- a/client/mentions.html
+++ b/client/mentions.html
@@ -92,7 +92,7 @@
                     target: "#mentions",
                     x_accessor: "minute",
                     y_accessor: "value",
-                    markers:markers,
+                    //markers:markers,
                     y_extended_ticks: true,
                     aggregate_rollover: true,
                     full_width: true,
