--- a/client/mentions.html
+++ b/client/mentions.html
@@ -115,6 +115,7 @@
           <li><a href="/hashtags"> Debate hashtags </a> </li>
           <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
           <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
+          <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
       </ul>
   </nav>
     <div id="mentions">
