playing wit hrealtime

--- a/client/mentions-debaters.html
+++ b/client/mentions-debaters.html
@@ -114,7 +114,7 @@
           <li><a href="/hashtags"> Debate hashtags </a> </li>
           <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
           <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
-          <li><a href="/sentimentstack"> Specific Tracked Tags </a> </li>
+          <li><a href="/sentimentstack">Sentiment</a> </li>
       </ul>
   </nav>
     <div id="mentions">
