--- a/client/hashtagsspec.html
+++ b/client/hashtagsspec.html
@@ -65,7 +65,7 @@
             <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
             <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
             <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
-            <li><a href="/sentimentstack"> Specific Tracked Tags </a> </li>
+            <li><a href="/sentimentstack">Sentiment</a> </li>
         </ul>
     </nav>
     <div id="tags">
