--- a/client/sentimentstack.html
+++ b/client/sentimentstack.html
@@ -64,7 +64,7 @@
           <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
           <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
           <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
-          <li><a href="/sentimentstack"> Specific Tracked Tags </a> </li>
+          <li><a href="/sentimentstack">Sentiment</a> </li>
       </ul>
   </nav>
     <div id="mentions">
