--- a/client/mentions.html
+++ b/client/mentions.html
@@ -117,6 +117,7 @@
           <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
           <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
           <li><a href="/sentimentstack">Sentiment</a> </li>
+          <li><a href="/sentimentns">Sentiment</a> </li>
       </ul>
   </nav>
     <div id="mentions">
