--- a/client/sentimentnonstack.html
+++ b/client/sentimentnonstack.html
@@ -5,9 +5,6 @@
 @Last modified by:   john
 @Last modified time: 21-May-172017
 -->
-
-
-
 <!DOCTYPE html>
 <html>
 
@@ -18,61 +15,64 @@
     <script src='./js/d3.min.js'></script>
     <script src='./js/metricsgraphics.min.js'></script>
     <link href='./css/metricsgraphics.css' rel='stylesheet' type='text/css'>
-    <link href='./css/override.css' rel='stylesheet' type='text/css'>
+    <link href='./css/leaders.css' rel='stylesheet' type='text/css'>
     <link href='./css/common.css' rel='stylesheet' type='text/css'>
     <script src='./js/mg_line_brushing.js'></script>
     <link rel='stylesheet' href='./css/mg_line_brushing.css' />
     <style>
-
+        #tags {
+            width: 90%;
+            margins: auto;
+        }
     </style>
     <script>
-        function generateGraph() {
-            d3.json('http://188.166.165.168/hashdataspec', function(data) {
+
+        function generateGraph(){
+            d3.json('http://188.166.165.168/sentimentnonstack', function(data) {
                 //modify away!
                 //console.log(data);
                 MG.data_graphic({
-                    title: "Hashtags #" + data.trackingtag,
+                    title: "Sentiment #" + data.trackingtag,
                     description: "test",
                     data: data.data,
                     legend: data.labels,
                     width: 800,
                     height: 700,
-                    target: "#tags",
+                    target: "#mentions",
                     x_accessor: "minute",
                     y_accessor: "value",
                     y_extended_ticks: true,
                     aggregate_rollover: true,
                     full_width: true,
-                    legend_target: '.legend'
+                    legend_target: '#legend'
                 });
+
 
             });
 
         }
-
         generateGraph();
-        setInterval(function() {
-            generateGraph()
-        }, 60000)
+        setInterval(function(){generateGraph()}, 60000)
     </script>
 </head>
 
 <body>
-    <nav id="menu">
-        <ul>
-            <li><a href="/mentions"> Leader Mentions </a></li>
-            <li><a href="/hashtags"> Debate hashtags </a> </li>
-            <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
-            <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
-            <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
-            <li><a href="/sentimentstack">Sentiment</a> </li>
-            <li><a href="/sentimentns">Sentiment</a> </li>
-        </ul>
-    </nav>
-    <div id="tags">
+  <nav id="menu">
+      <ul>
+          <li><a href="/mentions"> Leader Mentions </a></li>
+          <li><a href="/hashtags"> Debate hashtags </a> </li>
+          <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
+          <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
+          <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
+          <li><a href="/sentimentstack">Sentiment</a> </li>
+          <li><a href="/sentimentns">Sentiment</a> </li>
+      </ul>
+  </nav>
+    <div id="mentions">
+
+
     </div>
-    <div id="totals">
-    </div>
+    <div id="legend">
 </body>
 
 </html>
