--- a/client/sentimentstack.html
+++ b/client/sentimentstack.html
@@ -32,7 +32,7 @@
                 //modify away!
                 //console.log(data);
                 MG.data_graphic({
-                    title: "Mentions totals under #" + data.trackingtag,
+                    title: "Sentiment #" + data.trackingtag,
                     description: "test",
                     data: data.data,
                     legend: data.labels,
@@ -65,6 +65,7 @@
           <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
           <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
           <li><a href="/sentimentstack">Sentiment</a> </li>
+          <li><a href="/sentimentns">Sentiment</a> </li>
       </ul>
   </nav>
     <div id="mentions">
