--- a/client/hashtagsreal.html
+++ b/client/hashtagsreal.html
@@ -83,6 +83,7 @@
             <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
             <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
             <li><a href="/sentimentstack"> Specific Tracked Tags </a> </li>
+            <li><a href="/sentimentns">Sentiment</a> </li>
         </ul>
     </nav>
     <div id="tags">
