--- a/client/mentions-debaters.html
+++ b/client/mentions-debaters.html
@@ -115,6 +115,7 @@
           <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
           <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
           <li><a href="/sentimentstack">Sentiment</a> </li>
+          <li><a href="/sentimentns">Sentiment</a> </li>
       </ul>
   </nav>
     <div id="mentions">
