--- a/client/mentionsstack.html
+++ b/client/mentionsstack.html
@@ -65,6 +65,7 @@
           <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
           <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
           <li><a href="/sentimentstack">Sentiment</a> </li>
+          <li><a href="/sentimentns">Sentiment</a> </li>
       </ul>
   </nav>
     <div id="mentions">
