--- a/client/NeoNetwork.html
+++ b/client/NeoNetwork.html
@@ -5,10 +5,10 @@
 
 <!--<script src="http://cdn.graphalchemist.com/alchemy.min.js">-->
 
-<script src='/socket.io/socket.io.js'></script>
-<script src="https://code.jquery.com/jquery-1.12.3.min.js"   integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="   crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
-<script src="/scripts/jsonp.js"></script>
+
+<script src="./js/jquery.min.js"></script>
+<script src="./js/d3.min.js'" charset="utf-8"></script>
+<script src="./js/jsonp.js"></script>
 
 
 </head>
