--- a/client/NeoNetwork.html
+++ b/client/NeoNetwork.html
@@ -7,7 +7,7 @@
 
 
 <script src="./js/jquery.min.js"></script>
-<script src="./js/d3.min.js'" charset="utf-8"></script>
+<script src="./js/d3.min.js"></script>
 <script src="./js/jsonp.js"></script>
 
 
