--- a/client/networkviz.html
+++ b/client/networkviz.html
@@ -8,7 +8,7 @@
 <!--<script src="http://cdn.graphalchemist.com/alchemy.min.js">-->
 
 <script src="./js/jquery.min.js"></script>
-<script src="./js/d3.min.js"></script>
+<script src="./js/d33.min.js"></script>
 <script src="./js/jsonp.js"></script>
 
 
@@ -45,7 +45,7 @@
     // setup svg div
     var svg = d3.select("#graph").append("svg")
             .attr("width", "100%").attr("height", "100%")
-            .call(d3.zoom().on("zoom", d3zoom))
+            .call(d3.behaviour.zoom().on("zoom", d3zoom))
             .append("g");
     //$(function(){
     var width = $("#graph").width(), height = $("#graph").height();
