--- a/client/networkviz.html
+++ b/client/networkviz.html
@@ -8,7 +8,7 @@
 <!--<script src="http://cdn.graphalchemist.com/alchemy.min.js">-->
 
 <script src="./js/jquery.min.js"></script>
-<script src="./js/d33.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="./js/jsonp.js"></script>
 
 
