added neo server

--- a/client/networkviz.html
+++ b/client/networkviz.html
@@ -45,7 +45,7 @@
     // setup svg div
     var svg = d3.select("#graph").append("svg")
             .attr("width", "100%").attr("height", "100%")
-            .call(d3.behaviour.zoom().on("zoom", d3zoom))
+            .call(d3.behavior.zoom().on("zoom", d3zoom))
             .append("g");
     //$(function(){
     var width = $("#graph").width(), height = $("#graph").height();
