--- a/client/networkviz.html
+++ b/client/networkviz.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="styles/main.css"/>
+    <link rel="stylesheet" href="./css/main.css"/>
 
 
 <!--<script src="http://cdn.graphalchemist.com/alchemy.min.js">-->
