--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -20,7 +20,7 @@
     };
 
     function generateGraph(){
-        d3.json('http://188.166.165.168/mentiondata', function(data) {
+        d3.json('http://188.166.165.168/getHashtagsForMatrix', function(data) {
 
 
           var matrix = new BubbleMatrix(config);
