--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -4,8 +4,9 @@
 
 <head>
   <link rel="stylesheet" href="css/bubble-matrix.min.css">
-  <script src="./js/d3/d3.js'"></script>
-  <script src="./js//d3-tip/index.js"></script>
+
+    <script src='./js/d3.min.js'></script>
+  <script src='./js//d3-tip/index.js'></script>
   <script src="./js/bubble-matrix.min.js"></script>
 </head>
 
