--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -5,7 +5,7 @@
 <head>
   <link rel="stylesheet" href="css/bubble-matrix.min.css">
 
-    <script src='./js/d3.min.js'></script>
+    <script src='./js/d3/d3.min.js'></script>
   <script src='./js//d3-tip/index.js'></script>
   <script src="./js/bubble-matrix.min.js"></script>
 </head>
@@ -38,7 +38,7 @@
     setInterval(function(){generateGraph()}, 60000)
 
 
-  
+
   </script>
 </body>
 
