adding bubble matrix

--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -4,7 +4,7 @@
 
 <head>
   <link rel="stylesheet" href="./css/bubble-matrix.min.css">
-
+<script src='./js/jquery.min.js'></script>
   <script src='./js/d3/d3.min.js'></script>
   <script src='./js//d3-tip/index.js'></script>
   <script src="./js/bubble-matrix.min.js"></script>
@@ -14,20 +14,22 @@
   <div id="bubble"></div>
 
   <script>
+  $('#bubble').empty();
     function generateGraph() {
+
       d3.json('http://188.166.165.168/getHashtagsForMatrix', function(data) {
         var config = {
           // Mandatory need argument root or id
           // root: d3.select('#bubble'),
           //width: 800,
           // {number} height: The height of the canvas, not the matrix.
-          height: 600,
+          height: 1000,
           selector: '#bubble',
           duration: 50,
   // {number} maxRadius: The radius of the circles.
-  maxRadius: 5,
+  maxRadius: 1,
   // {number} maxColors: The numbers of colors to used.
-  maxColors: 6,
+  maxColors: 10,
           onClick: val => alert(`Value ${val}`)
         };
 
