adding bubble matrix

--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -26,8 +26,15 @@
           height: 1000,
           selector: '#bubble',
           duration: 50,
+          hideLeftTitle: true,
+  // {boolean} hideRightTitle: Hide the right title.
+  hideRightTitle: true,
+  // {boolean} hideTopTitle: Hide the top title.
+  hideTopTitle: true,
+  // {boolean} hideBottomTitle: Hide the bottom title.
+  hideBottomTitle: true,
   // {number} maxRadius: The radius of the circles.
-  maxRadius: 1,
+  maxRadius: 5,
   // {number} maxColors: The numbers of colors to used.
   maxColors: 10,
           onClick: val => alert(`Value ${val}`)
