adding bubble matrix

--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+  <nav id="menu">
+      <ul>
+          <li><a href="/mentions"> Leader Mentions </a></li>
+          <li><a href="/hashtags"> Debate hashtags </a> </li>
+          <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
+          <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
+          <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
+          <li><a href="/sentimentstack">Sentiment Stack</a> </li>
+          <li><a href="/sentimentns">Sentiment</a> </li>
+          <li><a href="/bubblematrix.html">Bubble Matrix</a> </li>
+      </ul>
+  </nav>
   <div id="bubble"></div>
 
   <script>
