--- a/client/mentions.html
+++ b/client/mentions.html
@@ -116,8 +116,9 @@
           <li><a href="/mentionsstacked"> Leader Mentions (stacking) </a> </li>
           <li><a href="/hashtagsstacked"> Debate Hashtags (stacking) </a> </li>
           <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
-          <li><a href="/sentimentstack">Sentiment</a> </li>
+          <li><a href="/sentimentstack">Sentiment Stack</a> </li>
           <li><a href="/sentimentns">Sentiment</a> </li>
+          <li><a href="/bubblematrix.html">Bubble Matrix</a> </li>
       </ul>
   </nav>
     <div id="mentions">
