--- a/client/sentimentstack.html
+++ b/client/sentimentstack.html
@@ -66,6 +66,7 @@
           <li><a href="/hashdataspecific"> Specific Tracked Tags </a> </li>
           <li><a href="/sentimentstack">Sentiment</a> </li>
           <li><a href="/sentimentns">Sentiment</a> </li>
+          <li><a href="/bubblematrix.html">Sentiment</a> </li>
       </ul>
   </nav>
     <div id="mentions">
