--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -4,10 +4,12 @@
 
 <head>
   <link rel="stylesheet" href="./css/bubble-matrix.min.css">
+  <link href='./css/common.css' rel='stylesheet' type='text/css'>
   <script src='./js/jquery.min.js'></script>
   <script src='./js/d3/d3.min.js'></script>
   <script src='./js//d3-tip/index.js'></script>
   <script src="./js/bubble-matrix.min.js"></script>
+
 </head>
 
 <body>
