adding bubble matrix

--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -45,7 +45,7 @@
           // {boolean} hideRightTitle: Hide the right title.
           hideRightTitle: true,
           // {boolean} hideTopTitle: Hide the top title.
-          hideTopTitle: true,
+          hideTopTitle: false,
           // {boolean} hideBottomTitle: Hide the bottom title.
           hideBottomTitle: true,
           // {number} maxRadius: The radius of the circles.
