adding bubble matrix

--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -47,7 +47,7 @@
           // {boolean} hideTopTitle: Hide the top title.
           hideTopTitle: false,
           // {boolean} hideBottomTitle: Hide the bottom title.
-          hideBottomTitle: true,
+          hideBottomTitle: false,
           // {number} maxRadius: The radius of the circles.
           maxRadius: 20,
           tooltip: d3.tip().html(value => 'Value: ' + (value*100)),
