--- a/client/hashtagsreal.html
+++ b/client/hashtagsreal.html
@@ -29,8 +29,8 @@
         function generateGraph() {
             d3.json('http://188.166.165.168/hashdata', function(data) {
                 //modify away!
-                //console.log(data);
-                //data = MG.convert.date(data, 'realtime');
+                console.log(data);
+                data = MG.convert.date(data, 'realtime');
                 MG.data_graphic({
                     title: "Hashtags #" + data.trackingtag,
                     description: "test",
