--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -68,7 +68,7 @@ $('#bubble').empty();
       });
 
       $('#bubble2').empty();
-            d3.json('http://188.166.165.168:8080/getHashtagsForMatrix', function(data) {
+            d3.json('http://188.166.165.168/getHashtagsForMatrix2', function(data) {
               console.log(data);
               var config = {
                 // Mandatory need argument root or id
