--- a/client/bubblematrix.html
+++ b/client/bubblematrix.html
@@ -35,7 +35,7 @@ var height =900;
       width = width +10;
       //height  = math.max(900, $(document).height());
 $('#bubble').empty();
-      d3.json('http://188.166.165.168/getHashtagsForMatrix', function(data) {
+      d3.json('http://127.0.0.1:8080/getHashtagsForMatrix', function(data) {
         console.log(data);
         var config = {
           // Mandatory need argument root or id
